feat(blog): support inline post images
